--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/helpers.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
